@@ -1,3 +1,7 @@
+Sun Feb  7 04:02:08 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* parse.y: Get rid of tags for Ripper, pointless in 1.8.
+
 Sat Feb  6 02:06:01 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* test/ruby/test_array.rb (TestArray#test_splat): Add test cases
